z-index fix

--- a/src/styles/app.global.css
+++ b/src/styles/app.global.css
@@ -2,6 +2,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700&subset=latin,cyrillic-ext);
 
 #ChatApp {
+    z-index: 9999;
     position: fixed;
     height: 100%;
     bottom:0;
